# qmt-bridge-backup

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TEST_SYNC.txt  justfile  mkdocs.yml  pyproject.toml  qmt_client.py  starbridge_client.py  test_sequential.sh
.codex/subagents/: quant-compliance-gatekeeper.md  quant-data-specialist.md  quant-execution-attribution-specialist.md  quant-factor-fundamental-specialist.md  quant-factor-specialist.md  quant-factor-style-specialist.md  quant-matrix-supervisor.md  quant-portfolio-risk-specialist.md  quant-strategy-debate-judge.md
.github/workflows/: ci.yml  publish.yml
dashboard/: _sidebar.py  app.py
dashboard/pages/: 1_行情数据.py  2_板块管理.py  3_交易日历.py  4_合约信息.py  5_数据下载.py  6_交易管理.py  7_系统状态.py
docs/: a-share-data-backfill-plan.md  configuration.md  getting-started.md  index.md  local-strategy-api-guide.md  project-backup-and-architecture.md  quant-agent-matrix.md  release-2026-04-24.md  rest-api.md  websocket.md  windows-wsl-operations.md
docs/api/: bank.md  calendar.md  credit.md  download.md  etf.md  financial.md  formula.md  fund.md  futures.md  hk.md  index.md  instrument.md  market.md  meta.md  option.md  sector.md  smt.md  tabular.md  tick.md  trading.md  utility.md  websocket-client.md
docs/css/: extra.css
policy/: gold-etf-intraday-swing.md
research/: README.md  __init__.py
research/agents/: __init__.py  blackboard.py  matrix.py
research/factors/: README.md  bollinger_ma7_trend.py  price_momentum_smoke_test.py
research/lib/: README.md  __init__.py  qmt_gics4_industry.py  research_client.py  research_database.py  research_database_client.py  starbridge_gics4_industry.py
research/notebooks/: README.md
research/reference/: README.md  qmt_gics4_industry_map.csv  qmt_gics4_industry_map_summary.json
research/strategies/: README.md
scripts/: apply_verified_qmt_cache_repairs.py  build_factor_cache.py  build_research_database.py  cache_qmt_gics4_industry_map.py  cache_starbridge_gics4_industry_map.py  check-qmt-bridge-health.sh  check-qmt-bridge-windows.ps1  check-starbridge-quant-health.sh  check-starbridge-quant-windows.ps1  check_cache_progress.py  cleanup-old-qmt-bridge.ps1  describe_quant_agent_matrix.py  diagnose_bson.py  download_all.py  find_bad_cache.py  gen-docs.sh  install-starbridge-forward-systemd.sh  install-starbridge-startup-task.ps1  install-startup-task.ps1  install-wsl-forward-systemd.sh  maintain_research_database.py  run_gm_fallback_validation.py  run_pytest.py  start-nohup.bat  start-qmt-bridge.ps1  start-starbridge-quant.ps1  start.bat  stop.bat  sync_quant_research_outputs.py  write_clean_full_snapshot.py  write_research_snapshot.py  write_snapshot_diff_report.py  wsl-forward-18888.py
src/qmt_bridge/: __init__.py
src/qmt_bridge/client/: __init__.py  base.py  calendar.py  download.py  financial.py  formula.py  futures.py  market.py  meta.py  tabular.py  tick.py  websocket.py
src/qmt_bridge/server/: __init__.py  app.py  cli.py  config.py  deps.py  downloader.py  helpers.py  models.py  scheduler.py  security.py  xtdata_lock.py
src/qmt_bridge/server/notify/: __init__.py  base.py  feishu.py  formatters.py  webhook.py
src/qmt_bridge/server/routers/: __init__.py  bank.py  calendar.py  cb.py  credit.py  download.py  etf.py  financial.py  formula.py  futures.py  meta.py  smt.py  tick.py
src/qmt_bridge/server/trading/: callbacks.py  manager.py
src/qmt_bridge/server/ws/: __init__.py  formula.py  l2_thousand.py  trade_callback.py  whole_quote.py
src/starbridge_quant/: __init__.py  _version.py  client_factory.py
src/starbridge_quant/client/: __init__.py  bank.py  base.py  cb.py  credit.py  etf.py  fund.py  hk.py  instrument.py  market.py  meta.py  option.py  sector.py  smt.py  trading.py  utility.py  websocket.py
src/starbridge_quant/server/: __init__.py  _params.py  app.py  cli.py  config.py  deps.py  downloader.py  models.py  scheduler.py  security.py  xtdata_lock.py
src/starbridge_quant/server/notify/: base.py  feishu.py  formatters.py  webhook.py
src/starbridge_quant/server/routers/: __init__.py  bank.py  credit.py  fund.py  hk.py  instrument.py  legacy.py  market.py  meta.py  option.py  sector.py  tabular.py  trading.py  utility.py
tests/: conftest.py  test_codex_subagents.py  test_migration_smoke.py  test_qmt_cache_repairs.py  test_quant_agent_matrix.py  test_research_client_gm.py  test_research_database_builder.py  test_research_database_client.py  test_research_database_maintenance.py
(+8 files in other folders)
