[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starbridge-quant"
dynamic = ["version"]
description = "StarBridge Quant - HTTP/WebSocket bridge for miniQMT (xtquant) with a WSL-first quant research workflow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "StarBridge Quant Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Base install has zero dependencies (client-only, stdlib)
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "pandas>=1.5",
    "numpy>=1.23",
]
pandas = ["pandas>=1.5"]
ws = ["websockets>=11.0"]
client = ["websockets>=11.0"]
notify = ["httpx>=0.25"]
scripts = ["tqdm>=4.60"]
full = [
    "starbridge-quant[server,ws,notify,scripts]",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "pdoc>=14.0",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=1.5",
]

[project.scripts]
starbridge-server = "starbridge_quant.server.cli:main"
starbridge-scheduler = "starbridge_quant.server.cli:scheduler_main"
qmt-server = "starbridge_quant.server.cli:main"
qmt-scheduler = "starbridge_quant.server.cli:scheduler_main"

[project.urls]
Homepage = "https://github.com/q454828722/starbridge-quant"
Repository = "https://github.com/q454828722/starbridge-quant"

[tool.hatch.version]
path = "src/starbridge_quant/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/starbridge_quant"]

[tool.hatch.build.targets.wheel.force-include]
"starbridge_client.py" = "starbridge_client.py"
"qmt_client.py" = "qmt_client.py"

[tool.hatch.build.targets.sdist]
include = ["src/starbridge_quant", "tests", "README.md", "LICENSE", "pyproject.toml", "starbridge_client.py", "qmt_client.py"]
